<resources>
    <string name="app_name">PoktSales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="success">Success!</string>
    <string name="error">Error</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_search">Search</string>
    <string name="search">Search…</string>
    <string name="hint_product_name">Product name…</string>
    <string name="hint_sell_price">Price…</string>
    <string name="desc_ok_button">Create</string>
    <string name="desc_cancel_button">Cancel</string>
    <string name="measure_piece">Piece</string>
    <string name="measure_kg">Kilogram</string>
    <string name="measure_lb">Pound</string>
    <string name="measure_g">Gram</string>
    <string name="measure_lt">Liter</string>
    <string name="measure_oz">Ounce</string>
    <string name="measure_non_specified">Not measured</string>
    <string name="header_product_name">Product name</string>
    <string name="header_product_price">Price</string>
    <string name="new_product">New product…</string>
    <string name="desc_product">Product description</string>
    <string name="inventory_product">Inventory product</string>
    <string name="sort">Sort by…</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="price">Price</string>
    <string name="none">None</string>
    <string name="delete_product">Delete product</string>
    <string name="will_be_deleted">will be deleted!</string>
    <string name="title_activity_sell">Sales</string>
    <string name="open_new_tab">Open new tab…</string>
    <string name="hint_tab_reference">Tab name or reference…</string>
    <string name="title_activity_add_to_sale">Add to sale</string>
    <string name="apply">Apply</string>
    <string name="title_activity_categories">Categories</string>
    <string name="todays_income">Today\'s income</string>
    <string name="see_more">See more</string>
    <string name="zero_currency">$ 0.00 MXN</string>
    <string name="empty_sale">No products in sale.</string>
    <string name="quick_sale">Quick sale</string>
    <string name="new_sale">New sale</string>
    <string name="new_temp_product">Add temporary product…</string>
    <string name="departments">Categories</string>
    <string name="w_o_category">W/O Category</string>
    <string name="menu">Menu</string>
    <string name="products_in_category">Products in category:</string>
    <string name="new_department_name">New category…</string>
    <string name="hint_department_name">Category name…</string>
    <string name="menu_cap">MENU</string>
    <string name="assign_to_category">Assign to category…</string>
    <string name="prompt_department">Assign to category…</string>
    <string name="no_category">without category</string>
    <string name="remove_from_category">Remove from category</string>
    <string name="improvement_positive">better than yesterday.</string>
    <string name="improvement_negative">remaining to catch up with yesterday sales.</string>
    <string name="sales_by_category">Sales by category</string>
    <string name="month_sales">Month\'s performance</string>
    <string name="product_of_the_day">Best seller of the day</string>
    <string name="product_in_use">Product name in use</string>
    <string name="new_product_no_name">Product without name</string>
    <string name="product_without_name">Product without name</string>
    <string name="sale_applied">Sale applied</string>
    <string name="cant_apply_empty_sale">Add products first to apply</string>
    <string name="reports">Reports</string>
    <string name="day_report">Day report</string>
    <string name="business_report">Business reports</string>
    <string name="settings">Settings</string>
    <string name="business_settings">Business settings</string>
    <string name="total_earnings">Total earnings</string>
    <string name="recent_sales">Recent sales</string>
    <string name="good_luck">Good luck!</string>
    <string name="invalid_name_for_tab">Tab name invalid</string>
    <string name="day_activity">Sales activity of the day</string>
    <string name="month_total_earnings">Month\'s total earnings</string>
    <string name="mongh_sales_by_category">Month sales by category</string>
    <string name="select_date">Select date…</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="set_default_business_name">My Business</string>
    <string name="label_business_name">Your business name</string>
    <string name="set_default_administrator_name">Administrator</string>
    <string name="label_administrator_name">Administrator name</string>
    <string name="err_tab_name_already_in_use">Tab name in use</string>
    <string name="err_invalid_product_name">Invalid Product name</string>
    <string name="err_department_name_already_in_use">Category name in use</string>
    <string name="err_invalid_department_name">Invalid Category name</string>
</resources>
