<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_big"
        android:paddingTop="@dimen/margin_big"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="@dimen/margin_big"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_title"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_sort_big"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:text="@string/sort"
            android:padding="@dimen/padding_title"/>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding_small"
        android:layout_height="wrap_content"
        android:id="@+id/spn_department"/>

   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RadioButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/rd_none"
           android:text="@string/none"/>
       <RadioButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/rd_alphabetically"
           android:text="@string/alphabetically"/>
       <RadioButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/rd_price"
           android:text="@string/price"/>
   </RadioGroup>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorSubtleGray">

        <ImageButton
            android:padding="@dimen/padding_medium"
            android:contentDescription="@string/desc_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:background="@drawable/selector_button_gray"
            app:srcCompat="@drawable/ic_check"/>

    </LinearLayout>


</LinearLayout>