<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_big"
        android:paddingTop="@dimen/margin_big"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="@dimen/margin_big"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_title"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_box_big"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:text="@string/new_temp_product"
            android:padding="@dimen/padding_title"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding_small"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_name"
        android:id="@+id/et_product_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:orientation="horizontal"
        android:weightSum="2">
        <EditText
            android:layout_width="0dp"
            android:id="@+id/et_product_price"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/hint_sell_price" />
        <Spinner
            android:layout_width="0dp"
            android:id="@+id/spn_product_measure"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorSubtleGray">

        <ImageButton
            android:padding="@dimen/padding_medium"
            android:contentDescription="@string/desc_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:background="@drawable/selector_button_gray"
            android:src="@drawable/ic_check"/>

    </LinearLayout>


</LinearLayout>